# linux_learning

./: .clang-format  .gitignore  README.md
01_LCD/: Makefile
01_LCD/utils/: Makefile
01_LCD_show_char_pixel/: show_char.c
01_lcd_show_char/02_LCD_show_char_freetype/: freetype_show_font  show_free_type.c
02_LCD_show_char_freetype/: Makefile
02_network/: client  main_client_tcp.c  main_client_udp.c  main_server_tcp.c  main_server_upd.c
03_DBUS/: README.md
03_DBUS/01_server/: README.md
03_DBUS/02_client_generated_code/: Makefile
03_DBUS/03_client_proxy/: Makefile  README.md  main.c
03_dbus/: Makefile  README.md  dbus_animal.c  dbus_animal.h  example.xml
03_dbus/01_server/: Makefile  main.c
03_dbus/02_client_generated_code/: main.c
04_input_touchscreen/: README.md
04_input_touchscreen/00_get_input_info/: main.c
04_input_touchscreen/01_blocking_io/: README.md  blocking-io-example.puml  main.c  non-blocking-io-example.puml
04_input_touchscreen/02_poll_select/: main_poll.c  main_select.c
04_input_touchscreen/04_aio_callback/: README.md  main.c
04_input_touchscreen/05_aio_sig_notify/: main.c
04_input_touchscreen/06_tslib/: main.c
05_thread/: pthread.c  pthread1.c
10_production_tool/: Makefile  README.md  config.conf  overview.drawio
10_production_tool/src/: Makefile  mainapp.c
10_production_tool/test/: Makefile  test_btn.c  (+4 more)
10_touch_screen_project/: Makefile  testapp
11_qt/: README.md  build.ninja  compile_commands.json
11_qt/test_stm32/: .gitignore  app_linux  linux.ini  mainwindow.cpp  mainwindow.ui  meson.build  stm32mp157.ini
(+60 files in other folders)
